--- a/public/css/app.css
+++ b/public/css/app.css
@@ -6691,6 +6691,16 @@ select {
   --tw-ring-shadow: 0 0 #0000;
   --tw-shadow: 0 0 #0000;
   --tw-shadow-colored: 0 0 #0000;
+  --tw-backdrop-blur: var(--tw-empty,/*!*/ /*!*/);
+  --tw-backdrop-brightness: var(--tw-empty,/*!*/ /*!*/);
+  --tw-backdrop-contrast: var(--tw-empty,/*!*/ /*!*/);
+  --tw-backdrop-grayscale: var(--tw-empty,/*!*/ /*!*/);
+  --tw-backdrop-hue-rotate: var(--tw-empty,/*!*/ /*!*/);
+  --tw-backdrop-invert: var(--tw-empty,/*!*/ /*!*/);
+  --tw-backdrop-opacity: var(--tw-empty,/*!*/ /*!*/);
+  --tw-backdrop-saturate: var(--tw-empty,/*!*/ /*!*/);
+  --tw-backdrop-sepia: var(--tw-empty,/*!*/ /*!*/);
+  --tw-backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
 }
 .container {
   width: 100%;
@@ -6755,14 +6765,23 @@ select {
 .top-5 {
   top: 1.25rem;
 }
-.-top-8 {
-  top: -2rem;
-}
 .-top-11 {
   top: -2.75rem;
 }
 .left-3 {
   left: 0.75rem;
+}
+.-top-20 {
+  top: -5rem;
+}
+.-left-20 {
+  left: -5rem;
+}
+.-top-16 {
+  top: -4rem;
+}
+.-left-16 {
+  left: -4rem;
 }
 .z-0 {
   z-index: 0;
@@ -6773,8 +6792,11 @@ select {
 .z-40 {
   z-index: 40;
 }
-.z-30 {
-  z-index: 30;
+.z-100 {
+  z-index: 100;
+}
+.z-20 {
+  z-index: 20;
 }
 .m-auto {
   margin: auto;
@@ -6795,15 +6817,26 @@ select {
   margin-left: 1.5rem;
   margin-right: 1.5rem;
 }
-.mx-1 {
-  margin-left: 0.25rem;
-  margin-right: 0.25rem;
+.mx-2 {
+  margin-left: 0.5rem;
+  margin-right: 0.5rem;
+}
+.my-10 {
+  margin-top: 2.5rem;
+  margin-bottom: 2.5rem;
+}
+.mx-5 {
+  margin-left: 1.25rem;
+  margin-right: 1.25rem;
 }
 .ml-3 {
   margin-left: 0.75rem;
 }
 .-ml-px {
   margin-left: -1px;
+}
+.mt-16 {
+  margin-top: 4rem;
 }
 .mb-3 {
   margin-bottom: 0.75rem;
@@ -6813,6 +6846,15 @@ select {
 }
 .mt-7 {
   margin-top: 1.75rem;
+}
+.mb-4 {
+  margin-bottom: 1rem;
+}
+.mt-1 {
+  margin-top: 0.25rem;
+}
+.mt-4 {
+  margin-top: 1rem;
 }
 .mt-14 {
   margin-top: 3.5rem;
@@ -6825,9 +6867,6 @@ select {
 }
 .mb-10 {
   margin-bottom: 2.5rem;
-}
-.mb-4 {
-  margin-bottom: 1rem;
 }
 .mb-2 {
   margin-bottom: 0.5rem;
@@ -6868,9 +6907,6 @@ select {
 .ml-2 {
   margin-left: 0.5rem;
 }
-.mt-4 {
-  margin-top: 1rem;
-}
 .ml-4 {
   margin-left: 1rem;
 }
@@ -6897,9 +6933,6 @@ select {
 }
 .-ml-7 {
   margin-left: -1.75rem;
-}
-.mt-1 {
-  margin-top: 0.25rem;
 }
 .mb-1 {
   margin-bottom: 0.25rem;
@@ -6967,6 +7000,9 @@ select {
 .h-16 {
   height: 4rem;
 }
+.h-20 {
+  height: 5rem;
+}
 .h-60 {
   height: 15rem;
 }
@@ -6993,9 +7029,6 @@ select {
 }
 .h-11 {
   height: 2.75rem;
-}
-.h-20 {
-  height: 5rem;
 }
 .h-3\/5 {
   height: 60%;
@@ -7039,6 +7072,12 @@ select {
 .h-4 {
   height: 1rem;
 }
+.h-44 {
+  height: 11rem;
+}
+.h-48 {
+  height: 12rem;
+}
 .max-h-screen {
   max-height: 100vh;
 }
@@ -7047,6 +7086,9 @@ select {
 }
 .w-5 {
   width: 1.25rem;
+}
+.w-full {
+  width: 100%;
 }
 .w-5\/12 {
   width: 41.666667%;
@@ -7063,11 +7105,11 @@ select {
 .w-auto {
   width: auto;
 }
-.w-full {
-  width: 100%;
-}
 .w-16 {
   width: 4rem;
+}
+.w-20 {
+  width: 5rem;
 }
 .w-60 {
   width: 15rem;
@@ -7095,9 +7137,6 @@ select {
 }
 .w-4\/5 {
   width: 80%;
-}
-.w-20 {
-  width: 5rem;
 }
 .w-9 {
   width: 2.25rem;
@@ -7132,12 +7171,6 @@ select {
 .w-1\/2 {
   width: 50%;
 }
-.w-4 {
-  width: 1rem;
-}
-.w-7 {
-  width: 1.75rem;
-}
 .w-3\/5 {
   width: 60%;
 }
@@ -7155,6 +7188,27 @@ select {
 }
 .w-1\/6 {
   width: 16.666667%;
+}
+.w-0 {
+  width: 0px;
+}
+.w-4 {
+  width: 1rem;
+}
+.w-1\/4 {
+  width: 25%;
+}
+.w-1\/5 {
+  width: 20%;
+}
+.w-2\/6 {
+  width: 33.333333%;
+}
+.w-36 {
+  width: 9rem;
+}
+.w-24 {
+  width: 6rem;
 }
 .max-w-7xl {
   max-width: 80rem;
@@ -7195,6 +7249,11 @@ select {
 .scale-100 {
   --tw-scale-x: 1;
   --tw-scale-y: 1;
+  transform: var(--tw-transform);
+}
+.scale-0 {
+  --tw-scale-x: 0;
+  --tw-scale-y: 0;
   transform: var(--tw-transform);
 }
 .transform {
@@ -7282,8 +7341,14 @@ select {
 .overflow-x-hidden {
   overflow-x: hidden;
 }
+.overflow-y-hidden {
+  overflow-y: hidden;
+}
 .overflow-x-scroll {
   overflow-x: scroll;
+}
+.overflow-y-scroll {
+  overflow-y: scroll;
 }
 .scroll-smooth {
   scroll-behavior: smooth;
@@ -7452,6 +7517,10 @@ select {
   --tw-bg-opacity: 1;
   background-color: rgb(235 234 243 / var(--tw-bg-opacity));
 }
+.bg-blue-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(59 130 246 / var(--tw-bg-opacity));
+}
 .bg-gray-800 {
   --tw-bg-opacity: 1;
   background-color: rgb(31 41 55 / var(--tw-bg-opacity));
@@ -7460,8 +7529,27 @@ select {
   --tw-bg-opacity: 1;
   background-color: rgb(187 247 208 / var(--tw-bg-opacity));
 }
+.bg-black {
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
+}
+.bg-gray-400\/50 {
+  background-color: rgb(156 163 175 / 0.5);
+}
+.bg-primary\/50 {
+  background-color: rgb(58 166 167 / 0.5);
+}
+.bg-primary\/70 {
+  background-color: rgb(58 166 167 / 0.7);
+}
 .bg-opacity-75 {
   --tw-bg-opacity: 0.75;
+}
+.bg-opacity-60 {
+  --tw-bg-opacity: 0.6;
+}
+.bg-opacity-40 {
+  --tw-bg-opacity: 0.4;
 }
 .fill-current {
   fill: currentColor;
@@ -7485,9 +7573,6 @@ select {
 .p-7 {
   padding: 1.75rem;
 }
-.p-9 {
-  padding: 2.25rem;
-}
 .p-2 {
   padding: 0.5rem;
 }
@@ -7502,10 +7587,6 @@ select {
 .px-2 {
   padding-left: 0.5rem;
   padding-right: 0.5rem;
-}
-.px-6 {
-  padding-left: 1.5rem;
-  padding-right: 1.5rem;
 }
 .px-5 {
   padding-left: 1.25rem;
@@ -7534,6 +7615,10 @@ select {
 .py-4 {
   padding-top: 1rem;
   padding-bottom: 1rem;
+}
+.px-6 {
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
 }
 .py-6 {
   padding-top: 1.5rem;
@@ -7584,20 +7669,17 @@ select {
 .pb-52 {
   padding-bottom: 13rem;
 }
-.pb-16 {
-  padding-bottom: 4rem;
-}
 .pb-7 {
   padding-bottom: 1.75rem;
+}
+.pl-5 {
+  padding-left: 1.25rem;
 }
 .pl-7 {
   padding-left: 1.75rem;
 }
 .pr-3 {
   padding-right: 0.75rem;
-}
-.pl-5 {
-  padding-left: 1.25rem;
 }
 .pr-5 {
   padding-right: 1.25rem;
@@ -7616,6 +7698,12 @@ select {
 }
 .pb-1 {
   padding-bottom: 0.25rem;
+}
+.pl-2 {
+  padding-left: 0.5rem;
+}
+.text-left {
+  text-align: left;
 }
 .text-center {
   text-align: center;
@@ -7711,6 +7799,10 @@ select {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
+.text-gray-600 {
+  --tw-text-opacity: 1;
+  color: rgb(75 85 99 / var(--tw-text-opacity));
+}
 .text-gray-900 {
   --tw-text-opacity: 1;
   color: rgb(17 24 39 / var(--tw-text-opacity));
@@ -7754,10 +7846,6 @@ select {
 .text-gray-400 {
   --tw-text-opacity: 1;
   color: rgb(156 163 175 / var(--tw-text-opacity));
-}
-.text-gray-600 {
-  --tw-text-opacity: 1;
-  color: rgb(75 85 99 / var(--tw-text-opacity));
 }
 .text-indigo-700 {
   --tw-text-opacity: 1;
@@ -7838,6 +7926,10 @@ select {
   --tw-shadow-colored: 0 25px 50px -12px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
+.shadow-primary\/50 {
+  --tw-shadow-color: rgb(58 166 167 / 0.5);
+  --tw-shadow: var(--tw-shadow-colored);
+}
 .ring {
   --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
   --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(3px + var(--tw-ring-offset-width)) var(--tw-ring-color);
@@ -7864,6 +7956,15 @@ select {
 .ring-opacity-5 {
   --tw-ring-opacity: 0.05;
 }
+.backdrop-blur-lg {
+  --tw-backdrop-blur: blur(16px);
+  -webkit-backdrop-filter: var(--tw-backdrop-filter);
+          backdrop-filter: var(--tw-backdrop-filter);
+}
+.backdrop-filter {
+  -webkit-backdrop-filter: var(--tw-backdrop-filter);
+          backdrop-filter: var(--tw-backdrop-filter);
+}
 .transition {
   transition-property: color, background-color, border-color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-text-decoration-color, -webkit-backdrop-filter;
   transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter;
@@ -7880,6 +7981,9 @@ select {
 .duration-200 {
   transition-duration: 200ms;
 }
+.duration-700 {
+  transition-duration: 700ms;
+}
 .duration-75 {
   transition-duration: 75ms;
 }
@@ -7892,8 +7996,14 @@ select {
 .ease-out {
   transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
 }
+.hover\:block:hover {
+  display: block;
+}
 .hover\:cursor-pointer:hover {
   cursor: pointer;
+}
+.hover\:border-2:hover {
+  border-width: 2px;
 }
 .hover\:border-b-2:hover {
   border-bottom-width: 2px;
@@ -7901,6 +8011,10 @@ select {
 .hover\:border-gray-300:hover {
   --tw-border-opacity: 1;
   border-color: rgb(209 213 219 / var(--tw-border-opacity));
+}
+.hover\:border-primary:hover {
+  --tw-border-opacity: 1;
+  border-color: rgb(58 166 167 / var(--tw-border-opacity));
 }
 .hover\:border-b-primary:hover {
   --tw-border-opacity: 1;
@@ -7930,9 +8044,16 @@ select {
   --tw-bg-opacity: 1;
   background-color: rgb(249 250 251 / var(--tw-bg-opacity));
 }
+.hover\:bg-blue-400:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(96 165 250 / var(--tw-bg-opacity));
+}
 .hover\:bg-gray-700:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(55 65 81 / var(--tw-bg-opacity));
+}
+.hover\:bg-opacity-80:hover {
+  --tw-bg-opacity: 0.8;
 }
 .hover\:text-gray-500:hover {
   --tw-text-opacity: 1;
@@ -7970,6 +8091,23 @@ select {
   --tw-shadow: 0 25px 50px -12px rgb(0 0 0 / 0.25);
   --tw-shadow-colored: 0 25px 50px -12px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+.hover\:shadow-lg:hover {
+  --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+.hover\:shadow-md:hover {
+  --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+.hover\:shadow-primary\/50:hover {
+  --tw-shadow-color: rgb(58 166 167 / 0.5);
+  --tw-shadow: var(--tw-shadow-colored);
+}
+.hover\:ease-in:hover {
+  transition-timing-function: cubic-bezier(0.4, 0, 1, 1);
 }
 .focus\:z-10:focus {
   z-index: 10;
@@ -8060,6 +8198,12 @@ select {
 .group:hover .group-hover\:block {
   display: block;
 }
+.group:hover .group-hover\:flex {
+  display: flex;
+}
+.group:hover .group-hover\:w-auto {
+  width: auto;
+}
 .group:hover .group-hover\:rotate-12 {
   --tw-rotate: 12deg;
   transform: var(--tw-transform);
@@ -8069,9 +8213,23 @@ select {
   --tw-scale-y: 1.1;
   transform: var(--tw-transform);
 }
+.group:hover .group-hover\:scale-100 {
+  --tw-scale-x: 1;
+  --tw-scale-y: 1;
+  transform: var(--tw-transform);
+}
+.group:hover .group-hover\:items-center {
+  align-items: center;
+}
+.group:hover .group-hover\:justify-center {
+  justify-content: center;
+}
 .group:hover .group-hover\:text-black {
   --tw-text-opacity: 1;
   color: rgb(0 0 0 / var(--tw-text-opacity));
+}
+.group:hover .group-hover\:ease-in {
+  transition-timing-function: cubic-bezier(0.4, 0, 1, 1);
 }
 @media (prefers-color-scheme: dark) {
 
@@ -8284,6 +8442,10 @@ select {
     height: 1.5rem;
   }
 
+  .md\:h-9 {
+    height: 2.25rem;
+  }
+
   .md\:w-full {
     width: 100%;
   }
@@ -8397,11 +8559,6 @@ select {
     line-height: 1.75rem;
   }
 
-  .md\:text-6xl {
-    font-size: 3.75rem;
-    line-height: 1;
-  }
-
   .md\:text-3xl {
     font-size: 1.875rem;
     line-height: 2.25rem;
@@ -8439,6 +8596,15 @@ select {
   .lg\:my-7 {
     margin-top: 1.75rem;
     margin-bottom: 1.75rem;
+  }
+
+  .lg\:my-3 {
+    margin-top: 0.75rem;
+    margin-bottom: 0.75rem;
+  }
+
+  .lg\:mt-20 {
+    margin-top: 5rem;
   }
 
   .lg\:mt-36 {
@@ -8549,6 +8715,10 @@ select {
     width: 24rem;
   }
 
+  .lg\:w-full {
+    width: 100%;
+  }
+
   .lg\:w-11\/12 {
     width: 91.666667%;
   }
@@ -8640,11 +8810,6 @@ select {
   .lg\:text-2xl {
     font-size: 1.5rem;
     line-height: 2rem;
-  }
-
-  .lg\:text-7xl {
-    font-size: 4.5rem;
-    line-height: 1;
   }
 
   .lg\:text-4xl {
